# mazes

./: README.md  experiment_comparison.py  generate_mazes.py  generated_mazes.csv  llm_maze_results.json  llm_solver.ipynb  llm_solver_script.py  main_solver.py  maze_solutions.csv  mazes.py  pyproject.toml  solve_mazes.py
backtracking/: solver_results.json
collision/: solver_results.json
comparison_plots/: summary_stats.csv
gpt41-ascii/: solver_results.json
gpt41-emoji/: solver_results.json
mazes/: maze_100x100_1.json  maze_100x100_10.json  maze_100x100_2.json  maze_100x100_3.json  maze_100x100_4.json  maze_100x100_5.json  maze_100x100_6.json  maze_100x100_7.json  maze_100x100_8.json  maze_100x100_9.json  maze_10x10_1.json  maze_10x10_10.json  maze_10x10_2.json  maze_10x10_3.json  maze_10x10_4.json  maze_10x10_5.json  maze_10x10_6.json  maze_10x10_7.json  maze_10x10_8.json  maze_10x10_9.json  maze_11x11_1.json  maze_11x11_10.json  maze_11x11_2.json  maze_11x11_3.json  maze_11x11_4.json  maze_11x11_5.json  maze_11x11_6.json  maze_11x11_7.json  maze_11x11_8.json  maze_11x11_9.json  maze_12x12_1.json  maze_12x12_10.json  maze_12x12_2.json  maze_12x12_3.json  maze_12x12_4.json  maze_12x12_5.json  maze_12x12_6.json  maze_12x12_7.json  maze_12x12_8.json  maze_12x12_9.json  (+120 more)
o4mini-ascii/: solver_results.json
o4mini-ascii-maxtrials=3/: solver_results.json
o4mini-emoji/: solver_results.json
o4mini-emoji-maxtrials=3/: solver_results.json
solver_engine/: abc_solver.py  experiment_runner.py  maze_utils.py  plotting_utils.py  results.py
tests/: test_abc_solver.py  (+3 more)
(+12 files in other folders)
