[project]
name = "mazes"
version = "0.1.0"
description = "Maze generation project using mazelib"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mazelib>=0.9.16",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "python-dotenv>=1.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "openai>=1.78.1",
    "click>=8.2.0",
    "pytest>=8.3.5",
    "litellm>=1.67.5",
    "tqdm>=4.67.1",
]
